--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -105,7 +105,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDashboard"
+        android:id="@+id/recyclerOrgList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/colorListBackground"
