--- a/app/src/main/res/menu/bottom_nav_menu_foodtruck.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_foodtruck.xml
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/navigation_cart"
         android:icon="@drawable/cart_dark"
-        android:title="@string/title_cart" />
+        android:title="@string/title_orgs" />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/f_profile_light"
