--- a/app/src/main/res/layout/fragment_coaches_list.xml
+++ b/app/src/main/res/layout/fragment_coaches_list.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imgProfile"
+            android:id="@+id/imgProfileBanner"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center"
@@ -78,7 +78,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerOrgList"
+        android:id="@+id/recyclerList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/colorListBackground"
