--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imgProfile"
+            android:id="@+id/imgProfileBanner"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center"
