--- a/app/src/main/res/drawable/ft_btn_border.xml
+++ b/app/src/main/res/drawable/ft_btn_border.xml
@@ -3,5 +3,5 @@
     <corners android:radius="5dp"/>
     <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
     <stroke android:width="1dp" android:color="@color/colorPrimaryDark"/>
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/colorPrimary" />
 </shape>
