--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/ft_border_rounded_dark">
 
     <ImageView
-        android:id="@+id/imgProfile"
+        android:id="@+id/imgProfileBanner"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_gravity="center"
@@ -25,7 +25,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgProfile">
+        app:layout_constraintTop_toBottomOf="@+id/imgProfileBanner">
 
         <LinearLayout
             android:layout_width="match_parent"
