--- a/app/src/main/res/layout/fragment_user_profile_2.xml
+++ b/app/src/main/res/layout/fragment_user_profile_2.xml
@@ -84,17 +84,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="52dp"
-                android:layout_marginTop="24dp"
                 android:background="@null"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="true"
                 android:singleLine="true"
                 android:text="chacezanaty@gmail.com"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/textView7"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.719" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
