--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,116 +2,75 @@
 
 <!-- Created by ChazzCoin : December 2019 -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorListBackground">
 
-    <LinearLayout
-        android:id="@+id/linearLayoutUserInfo"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/fDarkBlue"
-        android:orientation="vertical"
+    <include
+        android:id="@+id/include"
+        layout="@layout/card_ysr_about"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/imgProfileBanner"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:visibility="visible"
-            app:srcCompat="@drawable/fui_ic_anonymous_white_24dp" />
-
-        <TextView
-            android:id="@+id/txtUserWelcome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="USER INFO"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/txtUserEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="User Auth Type"
-            android:textColor="@color/white" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnProfile"
-                android:layout_width="125dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/ft_btn_border"
-                android:drawableLeft="@drawable/ft_profile_icon_30dp"
-                android:text="Profile"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/btnReview"
-                android:layout_width="125dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/ft_btn_border"
-                android:drawableLeft="@drawable/ft_spot_icon_30dp"
-                android:text="Review"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/btnLogout"
-                android:layout_width="125dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="5dp"
-                android:background="@drawable/ft_btn_border"
-                android:drawableLeft="@drawable/ft_dash_icon_30dp"
-                android:text="Logout" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayoutSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical">
-
-            <Spinner
-                android:id="@+id/spinLocations"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/ft_border_rounded_dark"
-                android:spinnerMode="dropdown"
-                android:textColor="@color/white"
-                android:visibility="visible" />
-        </LinearLayout>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Pick a Sport"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerSportList"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/colorListBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        tools:itemCount="2"
+        tools:listitem="@layout/card_sport">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Explore Services"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerSportList" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutUserInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        tools:itemCount="2"
+        tools:listitem="@layout/card_sport" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
