--- a/app/src/main/res/layout/fragment_user_profile_2.xml
+++ b/app/src/main/res/layout/fragment_user_profile_2.xml
@@ -59,11 +59,11 @@
             android:id="@+id/layoutProfileCoach"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/ft_border_rounded_dark"
             android:paddingBottom="25dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.421"
+            app:layout_constraintHorizontal_bias="0.526"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnProfileReview">
 
@@ -102,11 +102,12 @@
             android:id="@+id/layoutProfileCoach"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="168dp"
             android:background="@drawable/ft_border_rounded_dark"
             android:paddingBottom="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.684"
+            app:layout_constraintHorizontal_bias="0.473"
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
