--- a/app/src/main/res/layout/card_ysr_about.xml
+++ b/app/src/main/res/layout/card_ysr_about.xml
@@ -18,11 +18,12 @@
             android:id="@+id/txtCardInfoSubText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="3dp"
             android:text="Bringing Transparency to Youth Sports"
             android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,12 +34,13 @@
 
         <TextView
             android:id="@+id/txtCardInfoTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="301dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             android:layout_marginTop="38dp"
+            android:layout_marginEnd="3dp"
             android:text="US Youth Sports Report"
-            android:textColor="@color/white"
-            android:textSize="28sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
