--- a/app/src/main/res/layout/fragment_org_list.xml
+++ b/app/src/main/res/layout/fragment_org_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Created by ChazzCoin : December 2019 -->
+<!-- Created by ChazzCoin : October 2022 -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -81,7 +82,7 @@
         android:id="@+id/recyclerList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorListBackground"
+        android:background="#00FFFAF4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
