--- a/app/src/main/res/layout/item_list_coach.xml
+++ b/app/src/main/res/layout/item_list_coach.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/itemLocationName"
+            android:id="@+id/txtCardOrgName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -70,7 +70,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/txtPeople"
+                    android:id="@+id/txtCardOrgSport"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
